k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openai-ui
  namespace: openai-proxy
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: openai-ui
status:
  loadBalancer: {}
